# pilgrim

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yml  form.py  main.py  models.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml
resource/: grade_names.json  qna.json
resource_sample/: cafe_names.json  grade_names.json  interviewer_map.json  qna.json  quiz.json
templates/: base.html  event_toast.html  gallery.html  heading.html  index.html  qna.html  quiz.html
